[tool.poetry]
name = "relight"
version = "0.1.0"
description = ""
authors = ["tamaUdon <sakurayuki603@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
